istioctl/cmd/testdata/describe/productpage-v1-c7765c886-v99jb.json
{
 "configs": [
  {
   "@type": "type.googleapis.com/envoy.admin.v3.BootstrapConfigDump",
   "bootstrap": {
    "node": {
     "id": "sidecar~172.30.144.174~productpage-v1-c7765c886-v99jb.default~default.svc.cluster.local",
     "cluster": "productpage.default",
     "metadata": {
      "kubernetes.io/psp": "ibm-privileged-psp",
      "POD_NAME": "productpage-v1-c7765c886-v99jb",
      "CLUSTER_ID": "Kubernetes",
      "LABELS": {
       "version": "v1",
       "pod-template-hash": "c7765c886",
       "app": "productpage"
      },
      "ISTIO_PROXY_SHA": "istio-proxy:08cec447dfc349b314e226dc66132dbdb5d08fc9",
      "NAME": "productpage-v1-c7765c886-v99jb",
      "NAMESPACE": "default",
      "INCLUDE_INBOUND_PORTS": "9080",
      "app": "productpage",
      "EXCHANGE_KEYS": "NAME,NAMESPACE,INSTANCE_IPS,LABELS,OWNER,PLATFORM_METADATA,WORKLOAD_NAME,MESH_ID,SERVICE_ACCOUNT,CLUSTER_ID",
      "INSTANCE_IPS": "172.30.144.174,fe80::10e7:52ff:fecd:198b",
      "pod-template-hash": "c7765c886",
      "POD_PORTS": "[{\"containerPort\":9080,\"protocol\":\"TCP\"}]",
      "INTERCEPTION_MODE": "REDIRECT",
      "SERVICE_ACCOUNT": "bookinfo-productpage",
      "CONFIG_NAMESPACE": "default",
      "version": "v1",
      "WORKLOAD_NAME": "productpage-v1",
      "OWNER": "kubernetes://api/apps/v1/namespaces/default/deployments/productpage-v1",
      "ISTIO_VERSION": "1.4-alpha.945b2e081e817e63fab6c1112c55d585073b0b7a"
     },
     "locality": {},
     "build_version": "08cec447dfc349b314e226dc66132dbdb5d08fc9/1.12.0-dev/Clean/RELEASE/BoringSSL"
    },
    "static_resources": {
     "listeners": [
      {
       "address": {
        "socket_address": {
         "address": "0.0.0.0",
         "port_value": 15090
        }
       },
       "filter_chains": [
        {
         "filters": [
          {
           "name": "envoy.http_connection_manager",
           "config": {
            "codec_type": "AUTO",
            "http_filters": {
             "name": "envoy.router"
            },
            "stat_prefix": "stats",
            "route_config": {
              "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
             "virtual_hosts": [
              {
               "routes": [
                {
                 "route": {
                  "cluster": "prometheus_stats"
                 },
                 "match": {
                  "prefix": "/stats/prometheus"
                 }
                }
               ],
               "domains": [
                "*"
               ],
               "name": "backend"
              }
             ]
            }
           }
          }
         ]
        }
       ]
      }
     ],
     "clusters": [
      {
       "name": "prometheus_stats",
       "type": "STATIC",
       "connect_timeout": "0.250s",
       "hosts": [
        {
         "socket_address": {
          "address": "127.0.0.1",
          "port_value": 15000
         }
        }
       ]
      },
      {
       "name": "xds-grpc",
       "type": "STRICT_DNS",
       "connect_timeout": "10s",
       "hosts": [
        {
         "socket_address": {
          "address": "istio-pilot.istio-system",
          "port_value": 15011
         }
        }
       ],
       "circuit_breakers": {
        "thresholds": [
         {
          "max_connections": 100000,
          "max_pending_requests": 100000,
          "max_requests": 100000
         },
         {
          "priority": "HIGH",
          "max_connections": 100000,
          "max_pending_requests": 100000,
          "max_requests": 100000
         }
        ]
       },
       "tls_context": {
        "common_tls_context": {
         "tls_certificates": [
          {
           "certificate_chain": {
            "filename": "/etc/certs/cert-chain.pem"
           },
           "private_key": {
            "filename": "/etc/certs/key.pem"
           }
          }
         ],
         "validation_context": {
          "trusted_ca": {
           "filename": "/etc/certs/root-cert.pem"
          },
          "verify_subject_alt_name": [
           "spiffe://cluster.local/ns/istio-system/sa/istio-pilot-service-account"
          ]
         },
         "alpn_protocols": [
          "h2"
         ]
        }
       },
       "http2_protocol_options": {},
       "dns_refresh_rate": "300s",
       "dns_lookup_family": "V4_ONLY",
       "upstream_connection_options": {
        "tcp_keepalive": {
         "keepalive_time": 300
        }
       }
      },
      {
       "name": "zipkin",
       "type": "STRICT_DNS",
       "connect_timeout": "1s",
       "hosts": [
        {
         "socket_address": {
          "address": "zipkin.istio-system",
          "port_value": 9411
         }
        }
       ],
       "dns_refresh_rate": "300s",
       "dns_lookup_family": "V4_ONLY"
      }
     ]
    },
    "dynamic_resources": {
     "lds_config": {
      "ads": {}
     },
     "cds_config": {
      "ads": {}
     },
     "ads_config": {
      "api_type": "GRPC",
      "grpc_services": [
       {
        "envoy_grpc": {
         "cluster_name": "xds-grpc"
        }
       }
      ]
     }
    },
    "tracing": {
     "http": {
      "name": "envoy.zipkin",
      "config": {
       "collector_endpoint": "/api/v1/spans",
       "collector_cluster": "zipkin",
       "trace_id_128bit": "true",
       "shared_span_context": "false"
      }
     }
    },
    "admin": {
     "access_log_path": "/dev/null",
     "address": {
      "socket_address": {
       "address": "127.0.0.1",
       "port_value": 15000
      }
     }
    },
    "stats_config": {
     "stats_tags": [
      {
       "tag_name": "cluster_name",
       "regex": "^cluster\\.((.+?(\\..+?\\.svc\\.cluster\\.local)?)\\.)"
      },
      {
       "tag_name": "tcp_prefix",
       "regex": "^tcp\\.((.*?)\\.)\\w+?$"
      },
      {
       "tag_name": "response_code",
       "regex": "(response_code=\\.=(.+?);\\.;)|_rq(_(\\.d{3}))$"
      },
      {
       "tag_name": "response_code_class",
       "regex": "_rq(_(\\dxx))$"
      },
      {
       "tag_name": "http_conn_manager_listener_prefix",
       "regex": "^listener(?=\\.).*?\\.http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
       "tag_name": "http_conn_manager_prefix",
       "regex": "^http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
       "tag_name": "listener_address",
       "regex": "^listener\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
       "tag_name": "mongo_prefix",
       "regex": "^mongo\\.(.+?)\\.(collection|cmd|cx_|op_|delays_|decoding_)(.*?)$"
      },
      {
       "tag_name": "reporter",
       "regex": "(reporter=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "source_namespace",
       "regex": "(source_namespace=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "source_workload",
       "regex": "(source_workload=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "source_workload_namespace",
       "regex": "(source_workload_namespace=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "source_principal",
       "regex": "(source_principal=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "source_app",
       "regex": "(source_app=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "source_version",
       "regex": "(source_version=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "destination_namespace",
       "regex": "(destination_namespace=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "destination_workload",
       "regex": "(destination_workload=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "destination_workload_namespace",
       "regex": "(destination_workload_namespace=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "destination_principal",
       "regex": "(destination_principal=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "destination_app",
       "regex": "(destination_app=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "destination_version",
       "regex": "(destination_version=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "destination_service",
       "regex": "(destination_service=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "destination_service_name",
       "regex": "(destination_service_name=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "destination_service_namespace",
       "regex": "(destination_service_namespace=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "request_protocol",
       "regex": "(request_protocol=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "response_flags",
       "regex": "(response_flags=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "connection_security_policy",
       "regex": "(connection_security_policy=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "permissive_response_code",
       "regex": "(permissive_response_code=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "permissive_response_policyid",
       "regex": "(permissive_response_policyid=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "cache",
       "regex": "(cache\\.(.+?)\\.)"
      },
      {
       "tag_name": "component",
       "regex": "(component\\.(.+?)\\.)"
      },
      {
       "tag_name": "tag",
       "regex": "(tag\\.(.+?)\\.)"
      }
     ],
     "use_all_default_tags": false,
     "stats_matcher": {
      "inclusion_list": {
       "patterns": [
        {
         "prefix": "reporter="
        },
        {
         "prefix": "component"
        },
        {
         "prefix": "cluster_manager"
        },
        {
         "prefix": "listener_manager"
        },
        {
         "prefix": "http_mixer_filter"
        },
        {
         "prefix": "tcp_mixer_filter"
        },
        {
         "prefix": "server"
        },
        {
         "prefix": "cluster.xds-grpc"
        }
       ]
      }
     }
    }
   },
   "last_updated": "2019-10-21T14:42:45.016Z"
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.ClustersConfigDump",
   "version_info": "2019-10-21T14:42:47Z/11",
   "static_clusters": [
    {
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "prometheus_stats",
      "type": "STATIC",
      "connect_timeout": "0.250s",
      "hosts": [
       {
        "socket_address": {
         "address": "127.0.0.1",
         "port_value": 15000
        }
       }
      ]
     },
     "last_updated": "2019-10-21T14:42:45.018Z"
    },
    {
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "xds-grpc",
      "type": "STRICT_DNS",
      "connect_timeout": "10s",
      "hosts": [
       {
        "socket_address": {
         "address": "istio-pilot.istio-system",
         "port_value": 15011
        }
       }
      ],
      "circuit_breakers": {
       "thresholds": [
        {
         "max_connections": 100000,
         "max_pending_requests": 100000,
         "max_requests": 100000
        },
        {
         "priority": "HIGH",
         "max_connections": 100000,
         "max_pending_requests": 100000,
         "max_requests": 100000
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-pilot-service-account"
         ]
        },
        "alpn_protocols": [
         "h2"
        ]
       }
      },
      "http2_protocol_options": {},
      "dns_refresh_rate": "300s",
      "dns_lookup_family": "V4_ONLY",
      "upstream_connection_options": {
       "tcp_keepalive": {
        "keepalive_time": 300
       }
      }
     },
     "last_updated": "2019-10-21T14:42:45.028Z"
    },
    {
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "zipkin",
      "type": "STRICT_DNS",
      "connect_timeout": "1s",
      "hosts": [
       {
        "socket_address": {
         "address": "zipkin.istio-system",
         "port_value": 9411
        }
       }
      ],
      "dns_refresh_rate": "300s",
      "dns_lookup_family": "V4_ONLY"
     },
     "last_updated": "2019-10-21T14:42:45.028Z"
    }
   ],
   "dynamic_active_clusters": [
    {
     "version_info": "2019-10-21T14:42:37Z/10",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "BlackHoleCluster",
      "type": "STATIC",
      "connect_timeout": "10s"
     },
     "last_updated": "2019-10-21T14:42:45.451Z"
    },
    {
     "version_info": "2019-10-21T14:42:37Z/10",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "InboundPassthroughClusterIpv4",
      "type": "ORIGINAL_DST",
      "connect_timeout": "10s",
      "lb_policy": "CLUSTER_PROVIDED",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_connections": 102400,
         "max_retries": 1024
        }
       ]
      },
      "upstream_bind_config": {
       "source_address": {
        "address": "127.0.0.6",
        "port_value": 0
       }
      }
     },
     "last_updated": "2019-10-21T14:42:45.452Z"
    },
    {
     "version_info": "2019-10-21T14:42:37Z/10",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "InboundPassthroughClusterIpv6",
      "type": "ORIGINAL_DST",
      "connect_timeout": "10s",
      "lb_policy": "CLUSTER_PROVIDED",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_connections": 102400,
         "max_retries": 1024
        }
       ]
      },
      "upstream_bind_config": {
       "source_address": {
        "address": "::6",
        "port_value": 0
       }
      }
     },
     "last_updated": "2019-10-21T14:42:45.452Z"
    },
    {
     "version_info": "2019-10-21T14:42:37Z/10",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "PassthroughCluster",
      "type": "ORIGINAL_DST",
      "connect_timeout": "10s",
      "lb_policy": "CLUSTER_PROVIDED",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_connections": 102400,
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-10-21T14:42:45.451Z"
    },
    {
     "version_info": "2019-10-21T14:42:37Z/10",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "inbound|15020||localhost",
      "type": "STATIC",
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "load_assignment": {
       "cluster_name": "inbound|15020||localhost",
       "endpoints": [
        {
         "lb_endpoints": [
          {
           "endpoint": {
            "address": {
             "socket_address": {
              "address": "127.0.0.1",
              "port_value": 15020
             }
            }
           }
          }
         ]
        }
       ]
      }
     },
     "last_updated": "2019-10-21T14:42:45.452Z"
    },
    {
     "version_info": "2019-10-21T14:42:37Z/10",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "inbound|9080|http|productpage.default.svc.cluster.local",
      "type": "STATIC",
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "load_assignment": {
       "cluster_name": "inbound|9080|http|productpage.default.svc.cluster.local",
       "endpoints": [
        {
         "lb_endpoints": [
          {
           "endpoint": {
            "address": {
             "socket_address": {
              "address": "127.0.0.1",
              "port_value": 9080
             }
            }
           }
          }
         ]
        }
       ]
      }
     },
     "last_updated": "2019-10-21T14:42:45.452Z"
    },
    {
     "version_info": "2019-10-21T14:42:37Z/10",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080|v1|details.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080|v1|details.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/details"
        }
       }
      },
      "transport_socket_matches": [
       {
        "name": "mtls",
        "match": {
         "tlsMode": "istio"
        },
        "transport_socket": {
         "name": "tls",
         "typed_config": {
          "@type": "type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext",
          "common_tls_context": {
           "tls_certificates": [
            {
             "certificate_chain": {
              "filename": "/etc/certs/cert-chain.pem"
             },
             "private_key": {
              "filename": "/etc/certs/key.pem"
             }
            }
           ],
           "alpn_protocols": [
            "istio"
           ],
           "validation_context": {
            "trusted_ca": {
             "filename": "/etc/certs/root-cert.pem"
            },
            "verify_subject_alt_name": [
             "spiffe://cluster.local/ns/default/sa/bookinfo-details"
            ]
           }
          },
          "sni": "outbound_.9080_.v1_.details.default.svc.cluster.local"
         }
        }
       },
       {
        "name": "plaintext",
        "match": {},
        "transport_socket": {
         "name": "raw_buffer"
        }
       }
      ]
     },
     "last_updated": "2019-10-21T14:42:45.436Z"
    },
    {
     "version_info": "2019-10-21T14:42:47Z/11",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080|v1|productpage.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080|v1|productpage.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/productpage"
        }
       }
      },
      "transport_socket_matches": [
       {
        "name": "mtls",
        "match": {
         "tlsMode": "istio"
        },
        "transport_socket": {
         "name": "tls",
         "typed_config": {
          "@type": "type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext",
          "common_tls_context": {
           "tls_certificates": [
            {
             "certificate_chain": {
              "filename": "/etc/certs/cert-chain.pem"
             },
             "private_key": {
              "filename": "/etc/certs/key.pem"
             }
            }
           ],
           "alpn_protocols": [
            "istio"
           ],
           "validation_context": {
            "trusted_ca": {
             "filename": "/etc/certs/root-cert.pem"
            },
            "verify_subject_alt_name": [
             "spiffe://cluster.local/ns/default/sa/bookinfo-productpage"
            ]
           }
          },
          "sni": "outbound_.9080_.v1_.productpage.default.svc.cluster.local"
         }
        }
       },
       {
        "name": "plaintext",
        "match": {},
        "transport_socket": {
         "name": "raw_buffer"
        }
       }
      ]
     },
     "last_updated": "2019-10-21T14:42:47.078Z"
    },
    {
     "version_info": "2019-10-21T14:42:37Z/10",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080|v1|reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080|v1|reviews.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/reviews"
        }
       }
      },
      "transport_socket_matches": [
       {
        "name": "mtls",
        "match": {
         "tlsMode": "istio"
        },
        "transport_socket": {
         "name": "tls",
         "typed_config": {
          "@type": "type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext",
          "common_tls_context": {
           "tls_certificates": [
            {
             "certificate_chain": {
              "filename": "/etc/certs/cert-chain.pem"
             },
             "private_key": {
              "filename": "/etc/certs/key.pem"
             }
            }
           ],
           "alpn_protocols": [
            "istio"
           ],
           "validation_context": {
            "trusted_ca": {
             "filename": "/etc/certs/root-cert.pem"
            },
            "verify_subject_alt_name": [
             "spiffe://cluster.local/ns/default/sa/bookinfo-reviews"
            ]
           }
          },
          "sni": "outbound_.9080_.v1_.reviews.default.svc.cluster.local"
         }
        }
       },
       {
        "name": "plaintext",
        "match": {},
        "transport_socket": {
         "name": "raw_buffer"
        }
       }
      ]
     },
     "last_updated": "2019-10-21T14:42:45.448Z"
    },
    {
     "version_info": "2019-10-21T14:42:37Z/10",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080|v2|details.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080|v2|details.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/details"
        }
       }
      },
      "transport_socket_matches": [
       {
        "name": "mtls",
        "match": {
         "tlsMode": "istio"
        },
        "transport_socket": {
         "name": "tls",
         "typed_config": {
          "@type": "type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext",
          "common_tls_context": {
           "tls_certificates": [
            {
             "certificate_chain": {
              "filename": "/etc/certs/cert-chain.pem"
             },
             "private_key": {
              "filename": "/etc/certs/key.pem"
             }
            }
           ],
           "alpn_protocols": [
            "istio"
           ],
           "validation_context": {
            "trusted_ca": {
             "filename": "/etc/certs/root-cert.pem"
            },
            "verify_subject_alt_name": [
             "spiffe://cluster.local/ns/default/sa/bookinfo-details"
            ]
           }
          },
          "sni": "outbound_.9080_.v2_.details.default.svc.cluster.local"
         }
        }
       },
       {
        "name": "plaintext",
        "match": {},
        "transport_socket": {
         "name": "raw_buffer"
        }
       }
      ]
     },
     "last_updated": "2019-10-21T14:42:45.438Z"
    },
    {
     "version_info": "2019-10-21T14:42:37Z/10",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080|v2|reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080|v2|reviews.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/reviews"
        }
       }
      },
      "transport_socket_matches": [
       {
        "name": "mtls",
        "match": {
         "tlsMode": "istio"
        },
        "transport_socket": {
         "name": "tls",
         "typed_config": {
          "@type": "type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext",
          "common_tls_context": {
           "tls_certificates": [
            {
             "certificate_chain": {
              "filename": "/etc/certs/cert-chain.pem"
             },
             "private_key": {
              "filename": "/etc/certs/key.pem"
             }
            }
           ],
           "alpn_protocols": [
            "istio"
           ],
           "validation_context": {
            "trusted_ca": {
             "filename": "/etc/certs/root-cert.pem"
            },
            "verify_subject_alt_name": [
             "spiffe://cluster.local/ns/default/sa/bookinfo-reviews"
            ]
           }
          },
          "sni": "outbound_.9080_.v2_.reviews.default.svc.cluster.local"
         }
        }
       },
       {
        "name": "plaintext",
        "match": {},
        "transport_socket": {
         "name": "raw_buffer"
        }
       }
      ]
     },
     "last_updated": "2019-10-21T14:42:45.449Z"
    },
    {
     "version_info": "2019-10-21T14:42:37Z/10",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080|v3|reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080|v3|reviews.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/reviews"
        }
       }
      },
      "transport_socket_matches": [
       {
        "name": "mtls",
        "match": {
         "tlsMode": "istio"
        },
        "transport_socket": {
         "name": "tls",
         "typed_config": {
          "@type": "type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext",
          "common_tls_context": {
           "tls_certificates": [
            {
             "certificate_chain": {
              "filename": "/etc/certs/cert-chain.pem"
             },
             "private_key": {
              "filename": "/etc/certs/key.pem"
             }
            }
           ],
           "alpn_protocols": [
            "istio"
           ],
           "validation_context": {
            "trusted_ca": {
             "filename": "/etc/certs/root-cert.pem"
            },
            "verify_subject_alt_name": [
             "spiffe://cluster.local/ns/default/sa/bookinfo-reviews"
            ]
           }
          },
          "sni": "outbound_.9080_.v3_.reviews.default.svc.cluster.local"
         }
        }
       },
       {
        "name": "plaintext",
        "match": {},
        "transport_socket": {
         "name": "raw_buffer"
        }
       }
      ]
     },
     "last_updated": "2019-10-21T14:42:45.451Z"
    },
    {
     "version_info": "2019-10-21T14:42:37Z/10",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080||details.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080||details.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/bookinfo-details"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_._.details.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/details"
        }
       }
      }
     },
     "last_updated": "2019-10-21T14:42:45.434Z"
    },
    {
     "version_info": "2019-10-21T14:42:47Z/11",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080||productpage.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080||productpage.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/productpage"
        }
       }
      },
      "transport_socket_matches": [
       {
        "name": "mtls",
        "match": {
         "tlsMode": "istio"
        },
        "transport_socket": {
         "name": "tls",
         "typed_config": {
          "@type": "type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext",
          "common_tls_context": {
           "tls_certificates": [
            {
             "certificate_chain": {
              "filename": "/etc/certs/cert-chain.pem"
             },
             "private_key": {
              "filename": "/etc/certs/key.pem"
             }
            }
           ],
           "alpn_protocols": [
            "istio"
           ],
           "validation_context": {
            "trusted_ca": {
             "filename": "/etc/certs/root-cert.pem"
            },
            "verify_subject_alt_name": [
             "spiffe://cluster.local/ns/default/sa/bookinfo-productpage"
            ]
           }
          },
          "sni": "outbound_.9080_._.productpage.default.svc.cluster.local"
         }
        }
       },
       {
        "name": "plaintext",
        "match": {},
        "transport_socket": {
         "name": "raw_buffer"
        }
       }
      ]
     },
     "last_updated": "2019-10-21T14:42:47.077Z"
    },
    {
     "version_info": "2019-10-21T14:42:37Z/10",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080||reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080||reviews.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/bookinfo-reviews"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_._.reviews.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/reviews"
        }
       }
      }
     },
     "last_updated": "2019-10-21T14:42:45.445Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.ListenersConfigDump",
   "version_info": "2019-10-21T14:42:37Z/10",
   "static_listeners": [
    {
     "listener": {
      "@type": "type.googleapis.com/envoy.api.v2.Listener",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15090
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "http_filters": {
            "name": "envoy.router"
           },
           "stat_prefix": "stats",
           "route_config": {
              "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
            "virtual_hosts": [
             {
              "name": "backend",
              "routes": [
               {
                "route": {
                 "cluster": "prometheus_stats"
                },
                "match": {
                 "prefix": "/stats/prometheus"
                }
               }
              ],
              "domains": [
               "*"
              ]
             }
            ]
           },
           "codec_type": "AUTO"
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2019-10-21T14:42:45.030Z"
    }
   ],
   "dynamic_listeners": [
    {"active_state" :{
     "version_info": "2019-10-21T14:42:37Z/10",
     "listener": {
      "@type": "type.googleapis.com/envoy.api.v2.Listener",
      "name": "172.30.144.174_9080",
      "address": {
       "socket_address": {
        "address": "172.30.144.174",
        "port_value": 9080
       }
      },
      "filter_chains": [
       {
        "tls_context": {
         "common_tls_context": {
          "tls_certificates": [
           {
            "certificate_chain": {
             "filename": "/etc/certs/cert-chain.pem"
            },
            "private_key": {
             "filename": "/etc/certs/key.pem"
            }
           }
          ],
          "validation_context": {
           "trusted_ca": {
            "filename": "/etc/certs/root-cert.pem"
           }
          },
          "alpn_protocols": [
           "h2",
           "http/1.1"
          ]
         },
         "require_client_certificate": true
        },
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "typed_config": {
           "@type": "type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager",
           "stat_prefix": "inbound_172.30.144.174_9080",
           "http_filters": [
            {
             "name": "istio_authn",
             "typed_config": {
              "@type": "type.googleapis.com/istio.envoy.config.filter.http.authn.v2alpha1.FilterConfig",
              "policy": {
               "peers": [
                {
                 "mtls": {}
                }
               ]
              }
             }
            },
            {
             "name": "mixer",
             "typed_config": {
              "@type": "type.googleapis.com/istio.mixer.v1.config.client.HttpClientConfig",
              "transport": {
               "network_fail_policy": {
                "policy": "FAIL_CLOSE",
                "base_retry_wait": "0.080s",
                "max_retry_wait": "1s"
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "report_batch_max_entries": 100,
               "report_batch_max_time": "1s"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.proxy_version": {
                 "string_value": "1.4.0"
                },
                "context.reporter.kind": {
                 "string_value": "inbound"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://productpage-v1-c7765c886-v99jb.default"
                },
                "destination.ip": {
                 "bytes_value": "AAAAAAAAAAAAAP//rB6Qrg=="
                },
                "destination.namespace": {
                 "string_value": "default"
                },
                "destination.port": {
                 "int64_value": "9080"
                },
                "destination.uid": {
                 "string_value": "kubernetes://productpage-v1-c7765c886-v99jb.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "client_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 1
            },
            "overall_sampling": {
             "value": 100
            }
           },
           "server_name": "istio-envoy",
           "use_remote_address": false,
           "generate_request_id": true,
           "forward_client_cert_details": "APPEND_FORWARD",
           "set_current_client_cert_details": {
            "subject": true,
            "dns": true,
            "uri": true
           },
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "stream_idle_timeout": "0s",
           "normalize_path": true,
           "route_config": {
              "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
            "name": "inbound|9080|http|productpage.default.svc.cluster.local",
            "virtual_hosts": [
             {
              "name": "inbound|http|9080",
              "domains": [
               "*"
              ],
              "routes": [
               {
                "match": {
                 "prefix": "/"
                },
                "decorator": {
                 "operation": "productpage.default.svc.cluster.local:9080/*"
                },
                "typed_per_filter_config": {
                 "mixer": {
                  "@type": "type.googleapis.com/istio.mixer.v1.config.client.ServiceConfig",
                  "disable_check_calls": true,
                  "mixer_attributes": {
                   "attributes": {
                    "destination.service.host": {
                     "string_value": "productpage.default.svc.cluster.local"
                    },
                    "destination.service.name": {
                     "string_value": "productpage"
                    },
                    "destination.service.namespace": {
                     "string_value": "default"
                    },
                    "destination.service.uid": {
                     "string_value": "istio://default/services/productpage"
                    }
                   }
                  }
                 }
                },
                "name": "default",
                "route": {
                 "timeout": "0s",
                 "max_grpc_timeout": "0s",
                 "cluster": "inbound|9080|http|productpage.default.svc.cluster.local"
                }
               }
              ]
             }
            ],
            "validate_clusters": false
           }
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      },
      "listener_filters": [
       {
        "name": "envoy.listener.tls_inspector"
       }
      ],
      "listener_filters_timeout": "0.100s",
      "traffic_direction": "INBOUND",
      "continue_on_listener_filters_timeout": true
     },
     "last_updated": "2019-10-21T14:42:45.463Z"
    }},
    {"active_state" :{
     "version_info": "2019-10-21T14:42:37Z/10",
     "listener": {
      "@type": "type.googleapis.com/envoy.api.v2.Listener",
      "name": "fe80::10e7:52ff:fecd:198b_9080",
      "address": {
       "socket_address": {
        "address": "fe80::10e7:52ff:fecd:198b",
        "port_value": 9080
       }
      },
      "filter_chains": [
       {
        "tls_context": {
         "common_tls_context": {
          "tls_certificates": [
           {
            "certificate_chain": {
             "filename": "/etc/certs/cert-chain.pem"
            },
            "private_key": {
             "filename": "/etc/certs/key.pem"
            }
           }
          ],
          "validation_context": {
           "trusted_ca": {
            "filename": "/etc/certs/root-cert.pem"
           }
          },
          "alpn_protocols": [
           "h2",
           "http/1.1"
          ]
         },
         "require_client_certificate": true
        },
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "typed_config": {
           "@type": "type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager",
           "stat_prefix": "inbound_fe80::10e7:52ff:fecd:198b_9080",
           "http_filters": [
            {
             "name": "istio_authn",
             "typed_config": {
              "@type": "type.googleapis.com/istio.envoy.config.filter.http.authn.v2alpha1.FilterConfig",
              "policy": {
               "peers": [
                {
                 "mtls": {}
                }
               ]
              }
             }
            },
            {
             "name": "mixer",
             "typed_config": {
              "@type": "type.googleapis.com/istio.mixer.v1.config.client.HttpClientConfig",
              "transport": {
               "network_fail_policy": {
                "policy": "FAIL_CLOSE",
                "base_retry_wait": "0.080s",
                "max_retry_wait": "1s"
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "report_batch_max_entries": 100,
               "report_batch_max_time": "1s"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.proxy_version": {
                 "string_value": "1.4.0"
                },
                "context.reporter.kind": {
                 "string_value": "inbound"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://productpage-v1-c7765c886-v99jb.default"
                },
                "destination.ip": {
                 "bytes_value": "/oAAAAAAAAAQ51L//s0Ziw=="
                },
                "destination.namespace": {
                 "string_value": "default"
                },
                "destination.port": {
                 "int64_value": "9080"
                },
                "destination.uid": {
                 "string_value": "kubernetes://productpage-v1-c7765c886-v99jb.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "client_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 1
            },
            "overall_sampling": {
             "value": 100
            }
           },
           "server_name": "istio-envoy",
           "use_remote_address": false,
           "generate_request_id": true,
           "forward_client_cert_details": "APPEND_FORWARD",
           "set_current_client_cert_details": {
            "subject": true,
            "dns": true,
            "uri": true
           },
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "stream_idle_timeout": "0s",
           "normalize_path": true,
           "route_config": {
              "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
            "name": "inbound|9080|http|productpage.default.svc.cluster.local",
            "virtual_hosts": [
             {
              "name": "inbound|http|9080",
              "domains": [
               "*"
              ],
              "routes": [
               {
                "match": {
                 "prefix": "/"
                },
                "decorator": {
                 "operation": "productpage.default.svc.cluster.local:9080/*"
                },
                "typed_per_filter_config": {
                 "mixer": {
                  "@type": "type.googleapis.com/istio.mixer.v1.config.client.ServiceConfig",
                  "disable_check_calls": true,
                  "mixer_attributes": {
                   "attributes": {
                    "destination.service.host": {
                     "string_value": "productpage.default.svc.cluster.local"
                    },
                    "destination.service.name": {
                     "string_value": "productpage"
                    },
                    "destination.service.namespace": {
                     "string_value": "default"
                    },
                    "destination.service.uid": {
                     "string_value": "istio://default/services/productpage"
                    }
                   }
                  }
                 }
                },
                "name": "default",
                "route": {
                 "timeout": "0s",
                 "max_grpc_timeout": "0s",
                 "cluster": "inbound|9080|http|productpage.default.svc.cluster.local"
                }
               }
              ]
             }
            ],
            "validate_clusters": false
           }
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      },
      "listener_filters": [
       {
        "name": "envoy.listener.tls_inspector"
       }
      ],
      "listener_filters_timeout": "0.100s",
      "traffic_direction": "INBOUND",
      "continue_on_listener_filters_timeout": true
     },
     "last_updated": "2019-10-21T14:42:45.468Z"
    }},
    {"active_state" :{
     "version_info": "2019-10-21T14:42:37Z/10",
     "listener": {
      "@type": "type.googleapis.com/envoy.api.v2.Listener",
      "name": "172.30.144.174_15020",
      "address": {
       "socket_address": {
        "address": "172.30.144.174",
        "port_value": 15020
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.tcp_proxy",
          "typed_config": {
           "@type": "type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy",
           "stat_prefix": "inbound|15020||localhost",
           "cluster": "inbound|15020||localhost"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      },
      "listener_filters_timeout": "0.100s",
      "traffic_direction": "INBOUND",
      "continue_on_listener_filters_timeout": true
     },
     "last_updated": "2019-10-21T14:42:45.468Z"
    }},
    {"active_state" :{
     "version_info": "2019-10-21T14:42:37Z/10",
     "listener": {
      "@type": "type.googleapis.com/envoy.api.v2.Listener",
      "name": "0.0.0.0_9080",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 9080
       }
      },
      "filter_chains": [
       {
        "filter_chain_match": {
         "prefix_ranges": [
          {
           "address_prefix": "172.30.144.174",
           "prefix_len": 32
          },
          {
           "address_prefix": "fe80::10e7:52ff:fecd:198b",
           "prefix_len": 128
          }
         ]
        },
        "filters": [
         {
          "name": "envoy.tcp_proxy",
          "typed_config": {
           "@type": "type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy",
           "stat_prefix": "BlackHoleCluster",
           "cluster": "BlackHoleCluster"
          }
         }
        ]
       },
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "typed_config": {
           "@type": "type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager",
           "stat_prefix": "outbound_0.0.0.0_9080",
           "http_filters": [
            {
             "name": "mixer",
             "typed_config": {
              "@type": "type.googleapis.com/istio.mixer.v1.config.client.HttpClientConfig",
              "transport": {
               "network_fail_policy": {
                "policy": "FAIL_CLOSE",
                "base_retry_wait": "0.080s",
                "max_retry_wait": "1s"
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "report_batch_max_entries": 100,
               "report_batch_max_time": "1s"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.proxy_version": {
                 "string_value": "1.4.0"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://productpage-v1-c7765c886-v99jb.default"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-c7765c886-v99jb.default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-c7765c886-v99jb.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "operation_name": "EGRESS",
            "client_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 1
            },
            "overall_sampling": {
             "value": 100
            }
           },
           "use_remote_address": false,
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "stream_idle_timeout": "0s",
           "normalize_path": true,
           "rds": {
            "config_source": {
             "ads": {}
            },
            "route_config_name": "9080"
           }
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      },
      "listener_filters_timeout": "0.100s",
      "traffic_direction": "OUTBOUND",
      "continue_on_listener_filters_timeout": true
     },
     "last_updated": "2019-10-21T14:42:45.471Z"
    }},
    {"active_state" :{
     "version_info": "2019-10-21T14:42:37Z/10",
     "listener": {
      "@type": "type.googleapis.com/envoy.api.v2.Listener",
      "name": "virtualOutbound",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15001
       }
      },
      "filter_chains": [
       {
        "filter_chain_match": {
         "prefix_ranges": [
          {
           "address_prefix": "172.30.144.174",
           "prefix_len": 32
          },
          {
           "address_prefix": "fe80::10e7:52ff:fecd:198b",
           "prefix_len": 128
          }
         ]
        },
        "filters": [
         {
          "name": "envoy.tcp_proxy",
          "typed_config": {
           "@type": "type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy",
           "stat_prefix": "BlackHoleCluster",
           "cluster": "BlackHoleCluster"
          }
         }
        ]
       },
       {
        "filters": [
         {
          "name": "mixer",
          "typed_config": {
           "@type": "type.googleapis.com/istio.mixer.v1.config.client.TcpClientConfig",
           "transport": {
            "network_fail_policy": {
             "policy": "FAIL_CLOSE",
             "base_retry_wait": "0.080s",
             "max_retry_wait": "1s"
            },
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "report_batch_max_entries": 100,
            "report_batch_max_time": "1s"
           },
           "mixer_attributes": {
            "attributes": {
             "context.proxy_version": {
              "string_value": "1.4.0"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://productpage-v1-c7765c886-v99jb.default"
             },
             "destination.service.host": {
              "string_value": "PassthroughCluster"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "source.uid": {
              "string_value": "kubernetes://productpage-v1-c7765c886-v99jb.default"
             }
            }
           },
           "disable_check_calls": true
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "typed_config": {
           "@type": "type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy",
           "stat_prefix": "PassthroughCluster",
           "cluster": "PassthroughCluster"
          }
         }
        ]
       }
      ],
      "use_original_dst": true
     },
     "last_updated": "2019-10-21T14:42:45.474Z"
    }},
    {"active_state" :{
     "version_info": "2019-10-21T14:42:37Z/10",
     "listener": {
      "@type": "type.googleapis.com/envoy.api.v2.Listener",
      "name": "virtualInbound",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15006
       }
      },
      "filter_chains": [
       {
        "filter_chain_match": {
         "prefix_ranges": [
          {
           "address_prefix": "0.0.0.0",
           "prefix_len": 0
          }
         ]
        },
        "filters": [
         {
          "name": "envoy.tcp_proxy",
          "typed_config": {
           "@type": "type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy",
           "stat_prefix": "InboundPassthroughClusterIpv4",
           "cluster": "InboundPassthroughClusterIpv4"
          }
         }
        ],
        "metadata": {
         "filter_metadata": {
          "pilot_meta": {
           "original_listener_name": "virtualInbound"
          }
         }
        }
       },
       {
        "filter_chain_match": {
         "prefix_ranges": [
          {
           "address_prefix": "::0",
           "prefix_len": 0
          }
         ]
        },
        "filters": [
         {
          "name": "envoy.tcp_proxy",
          "typed_config": {
           "@type": "type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy",
           "stat_prefix": "InboundPassthroughClusterIpv6",
           "cluster": "InboundPassthroughClusterIpv6"
          }
         }
        ],
        "metadata": {
         "filter_metadata": {
          "pilot_meta": {
           "original_listener_name": "virtualInbound"
          }
         }
        }
       },
       {
        "filter_chain_match": {
         "prefix_ranges": [
          {
           "address_prefix": "172.30.144.174",
           "prefix_len": 32
          }
         ],
         "destination_port": 9080
        },
        "tls_context": {
         "common_tls_context": {
          "tls_certificates": [
           {
            "certificate_chain": {
             "filename": "/etc/certs/cert-chain.pem"
            },
            "private_key": {
             "filename": "/etc/certs/key.pem"
            }
           }
          ],
          "validation_context": {
           "trusted_ca": {
            "filename": "/etc/certs/root-cert.pem"
           }
          },
          "alpn_protocols": [
           "h2",
           "http/1.1"
          ]
         },
         "require_client_certificate": true
        },
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "typed_config": {
           "@type": "type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager",
           "stat_prefix": "inbound_172.30.144.174_9080",
           "http_filters": [
            {
             "name": "istio_authn",
             "typed_config": {
              "@type": "type.googleapis.com/istio.envoy.config.filter.http.authn.v2alpha1.FilterConfig",
              "policy": {
               "peers": [
                {
                 "mtls": {}
                }
               ]
              }
             }
            },
            {
             "name": "mixer",
             "typed_config": {
              "@type": "type.googleapis.com/istio.mixer.v1.config.client.HttpClientConfig",
              "transport": {
               "network_fail_policy": {
                "policy": "FAIL_CLOSE",
                "base_retry_wait": "0.080s",
                "max_retry_wait": "1s"
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "report_batch_max_entries": 100,
               "report_batch_max_time": "1s"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.proxy_version": {
                 "string_value": "1.4.0"
                },
                "context.reporter.kind": {
                 "string_value": "inbound"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://productpage-v1-c7765c886-v99jb.default"
                },
                "destination.ip": {
                 "bytes_value": "AAAAAAAAAAAAAP//rB6Qrg=="
                },
                "destination.namespace": {
                 "string_value": "default"
                },
                "destination.port": {
                 "int64_value": "9080"
                },
                "destination.uid": {
                 "string_value": "kubernetes://productpage-v1-c7765c886-v99jb.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "client_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 1
            },
            "overall_sampling": {
             "value": 100
            }
           },
           "server_name": "istio-envoy",
           "use_remote_address": false,
           "generate_request_id": true,
           "forward_client_cert_details": "APPEND_FORWARD",
           "set_current_client_cert_details": {
            "subject": true,
            "dns": true,
            "uri": true
           },
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "stream_idle_timeout": "0s",
           "normalize_path": true,
           "route_config": {
              "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
            "name": "inbound|9080|http|productpage.default.svc.cluster.local",
            "virtual_hosts": [
             {
              "name": "inbound|http|9080",
              "domains": [
               "*"
              ],
              "routes": [
               {
                "match": {
                 "prefix": "/"
                },
                "decorator": {
                 "operation": "productpage.default.svc.cluster.local:9080/*"
                },
                "typed_per_filter_config": {
                 "mixer": {
                  "@type": "type.googleapis.com/istio.mixer.v1.config.client.ServiceConfig",
                  "disable_check_calls": true,
                  "mixer_attributes": {
                   "attributes": {
                    "destination.service.host": {
                     "string_value": "productpage.default.svc.cluster.local"
                    },
                    "destination.service.name": {
                     "string_value": "productpage"
                    },
                    "destination.service.namespace": {
                     "string_value": "default"
                    },
                    "destination.service.uid": {
                     "string_value": "istio://default/services/productpage"
                    }
                   }
                  }
                 }
                },
                "name": "default",
                "route": {
                 "timeout": "0s",
                 "max_grpc_timeout": "0s",
                 "cluster": "inbound|9080|http|productpage.default.svc.cluster.local"
                }
               }
              ]
             }
            ],
            "validate_clusters": false
           }
          }
         }
        ],
        "metadata": {
         "filter_metadata": {
          "pilot_meta": {
           "original_listener_name": "172.30.144.174_9080"
          }
         }
        }
       },
       {
        "filter_chain_match": {
         "prefix_ranges": [
          {
           "address_prefix": "fe80::10e7:52ff:fecd:198b",
           "prefix_len": 128
          }
         ],
         "destination_port": 9080
        },
        "tls_context": {
         "common_tls_context": {
          "tls_certificates": [
           {
            "certificate_chain": {
             "filename": "/etc/certs/cert-chain.pem"
            },
            "private_key": {
             "filename": "/etc/certs/key.pem"
            }
           }
          ],
          "validation_context": {
           "trusted_ca": {
            "filename": "/etc/certs/root-cert.pem"
           }
          },
          "alpn_protocols": [
           "h2",
           "http/1.1"
          ]
         },
         "require_client_certificate": true
        },
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "typed_config": {
           "@type": "type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager",
           "stat_prefix": "inbound_fe80::10e7:52ff:fecd:198b_9080",
           "http_filters": [
            {
             "name": "istio_authn",
             "typed_config": {
              "@type": "type.googleapis.com/istio.envoy.config.filter.http.authn.v2alpha1.FilterConfig",
              "policy": {
               "peers": [
                {
                 "mtls": {}
                }
               ]
              }
             }
            },
            {
             "name": "mixer",
             "typed_config": {
              "@type": "type.googleapis.com/istio.mixer.v1.config.client.HttpClientConfig",
              "transport": {
               "network_fail_policy": {
                "policy": "FAIL_CLOSE",
                "base_retry_wait": "0.080s",
                "max_retry_wait": "1s"
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "report_batch_max_entries": 100,
               "report_batch_max_time": "1s"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.proxy_version": {
                 "string_value": "1.4.0"
                },
                "context.reporter.kind": {
                 "string_value": "inbound"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://productpage-v1-c7765c886-v99jb.default"
                },
                "destination.ip": {
                 "bytes_value": "/oAAAAAAAAAQ51L//s0Ziw=="
                },
                "destination.namespace": {
                 "string_value": "default"
                },
                "destination.port": {
                 "int64_value": "9080"
                },
                "destination.uid": {
                 "string_value": "kubernetes://productpage-v1-c7765c886-v99jb.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "client_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 1
            },
            "overall_sampling": {
             "value": 100
            }
           },
           "server_name": "istio-envoy",
           "use_remote_address": false,
           "generate_request_id": true,
           "forward_client_cert_details": "APPEND_FORWARD",
           "set_current_client_cert_details": {
            "subject": true,
            "dns": true,
            "uri": true
           },
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "stream_idle_timeout": "0s",
           "normalize_path": true,
           "route_config": {
              "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
            "name": "inbound|9080|http|productpage.default.svc.cluster.local",
            "virtual_hosts": [
             {
              "name": "inbound|http|9080",
              "domains": [
               "*"
              ],
              "routes": [
               {
                "match": {
                 "prefix": "/"
                },
                "decorator": {
                 "operation": "productpage.default.svc.cluster.local:9080/*"
                },
                "typed_per_filter_config": {
                 "mixer": {
                  "@type": "type.googleapis.com/istio.mixer.v1.config.client.ServiceConfig",
                  "disable_check_calls": true,
                  "mixer_attributes": {
                   "attributes": {
                    "destination.service.host": {
                     "string_value": "productpage.default.svc.cluster.local"
                    },
                    "destination.service.name": {
                     "string_value": "productpage"
                    },
                    "destination.service.namespace": {
                     "string_value": "default"
                    },
                    "destination.service.uid": {
                     "string_value": "istio://default/services/productpage"
                    }
                   }
                  }
                 }
                },
                "name": "default",
                "route": {
                 "timeout": "0s",
                 "max_grpc_timeout": "0s",
                 "cluster": "inbound|9080|http|productpage.default.svc.cluster.local"
                }
               }
              ]
             }
            ],
            "validate_clusters": false
           }
          }
         }
        ],
        "metadata": {
         "filter_metadata": {
          "pilot_meta": {
           "original_listener_name": "fe80::10e7:52ff:fecd:198b_9080"
          }
         }
        }
       },
       {
        "filter_chain_match": {
         "prefix_ranges": [
          {
           "address_prefix": "172.30.144.174",
           "prefix_len": 32
          }
         ],
         "destination_port": 15020
        },
        "filters": [
         {
          "name": "envoy.tcp_proxy",
          "typed_config": {
           "@type": "type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy",
           "stat_prefix": "inbound|15020||localhost",
           "cluster": "inbound|15020||localhost"
          }
         }
        ],
        "metadata": {
         "filter_metadata": {
          "pilot_meta": {
           "original_listener_name": "172.30.144.174_15020"
          }
         }
        }
       }
      ],
      "listener_filters": [
       {
        "name": "envoy.listener.original_dst"
       },
       {
        "name": "envoy.listener.tls_inspector"
       }
      ],
      "listener_filters_timeout": "1s",
      "continue_on_listener_filters_timeout": true
     },
     "last_updated": "2019-10-21T14:42:45.479Z"
    }}
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.ScopedRoutesConfigDump"
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.RoutesConfigDump",
   "static_route_configs": [
    {
     "route_config": {
          "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
      "name": "inbound|9080|http|productpage.default.svc.cluster.local",
      "virtual_hosts": [
       {
        "name": "inbound|http|9080",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "inbound|9080|http|productpage.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "productpage.default.svc.cluster.local:9080/*"
          },
          "typed_per_filter_config": {
           "mixer": {
            "@type": "type.googleapis.com/istio.mixer.v1.config.client.ServiceConfig",
            "disable_check_calls": true,
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              },
              "destination.service.name": {
               "string_value": "productpage"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              }
             }
            }
           }
          },
          "name": "default"
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2019-10-21T14:42:45.464Z"
    },
    {
     "route_config": {
          "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
      "name": "inbound|9080|http|productpage.default.svc.cluster.local",
      "virtual_hosts": [
       {
        "name": "inbound|http|9080",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "inbound|9080|http|productpage.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "productpage.default.svc.cluster.local:9080/*"
          },
          "typed_per_filter_config": {
           "mixer": {
            "@type": "type.googleapis.com/istio.mixer.v1.config.client.ServiceConfig",
            "disable_check_calls": true,
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              },
              "destination.service.name": {
               "string_value": "productpage"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              }
             }
            }
           }
          },
          "name": "default"
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2019-10-21T14:42:45.475Z"
    },
    {
     "route_config": {
          "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
      "name": "inbound|9080|http|productpage.default.svc.cluster.local",
      "virtual_hosts": [
       {
        "name": "inbound|http|9080",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "inbound|9080|http|productpage.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "productpage.default.svc.cluster.local:9080/*"
          },
          "typed_per_filter_config": {
           "mixer": {
            "@type": "type.googleapis.com/istio.mixer.v1.config.client.ServiceConfig",
            "disable_check_calls": true,
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              },
              "destination.service.name": {
               "string_value": "productpage"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              }
             }
            }
           }
          },
          "name": "default"
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2019-10-21T14:42:45.458Z"
    },
    {
     "route_config": {
          "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
      "name": "inbound|9080|http|productpage.default.svc.cluster.local",
      "virtual_hosts": [
       {
        "name": "inbound|http|9080",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "inbound|9080|http|productpage.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "productpage.default.svc.cluster.local:9080/*"
          },
          "typed_per_filter_config": {
           "mixer": {
            "@type": "type.googleapis.com/istio.mixer.v1.config.client.ServiceConfig",
            "disable_check_calls": true,
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              },
              "destination.service.name": {
               "string_value": "productpage"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              }
             }
            }
           }
          },
          "name": "default"
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2019-10-21T14:42:45.479Z"
    },
    {
     "route_config": {
          "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
      "virtual_hosts": [
       {
        "name": "backend",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/stats/prometheus"
          },
          "route": {
           "cluster": "prometheus_stats"
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2019-10-21T14:42:45.030Z"
    }
   ],
   "dynamic_route_configs": [
    {
     "version_info": "2019-10-21T14:42:37Z/10",
     "route_config": {
          "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
      "name": "9080",
      "virtual_hosts": [
       {
        "name": "details.default.svc.cluster.local:9080",
        "domains": [
         "details.default.svc.cluster.local",
         "details.default.svc.cluster.local:9080",
         "details",
         "details:9080",
         "details.default.svc.cluster",
         "details.default.svc.cluster:9080",
         "details.default.svc",
         "details.default.svc:9080",
         "details.default",
         "details.default:9080",
         "172.21.132.142",
         "172.21.132.142:9080"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9080||details.default.svc.cluster.local",
           "timeout": "0s",
           "retry_policy": {
            "retry_on": "connect-failure,refused-stream,unavailable,cancelled,resource-exhausted,retriable-status-codes",
            "num_retries": 2,
            "retry_host_predicate": [
             {
              "name": "envoy.retry_host_predicates.previous_hosts"
             }
            ],
            "host_selection_retry_max_attempts": "5",
            "retriable_status_codes": [
             503
            ]
           },
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "details.default.svc.cluster.local:9080/*"
          },
          "typed_per_filter_config": {
           "mixer": {
            "@type": "type.googleapis.com/istio.mixer.v1.config.client.ServiceConfig",
            "disable_check_calls": true,
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "details.default.svc.cluster.local"
              },
              "destination.service.name": {
               "string_value": "details"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/details"
              }
             }
            },
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "details.default.svc.cluster.local"
              },
              "destination.service.name": {
               "string_value": "details"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/details"
              }
             }
            }
           }
          },
          "name": "default"
         }
        ]
       },
       {
        "name": "productpage.default.svc.cluster.local:9080",
        "domains": [
         "productpage.default.svc.cluster.local",
         "productpage.default.svc.cluster.local:9080",
         "productpage",
         "productpage:9080",
         "productpage.default.svc.cluster",
         "productpage.default.svc.cluster:9080",
         "productpage.default.svc",
         "productpage.default.svc:9080",
         "productpage.default",
         "productpage.default:9080",
         "172.21.79.13",
         "172.21.79.13:9080"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9080||productpage.default.svc.cluster.local",
           "timeout": "0s",
           "retry_policy": {
            "retry_on": "connect-failure,refused-stream,unavailable,cancelled,resource-exhausted,retriable-status-codes",
            "num_retries": 2,
            "retry_host_predicate": [
             {
              "name": "envoy.retry_host_predicates.previous_hosts"
             }
            ],
            "host_selection_retry_max_attempts": "5",
            "retriable_status_codes": [
             503
            ]
           },
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "productpage.default.svc.cluster.local:9080/*"
          },
          "typed_per_filter_config": {
           "mixer": {
            "@type": "type.googleapis.com/istio.mixer.v1.config.client.ServiceConfig",
            "disable_check_calls": true,
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              },
              "destination.service.name": {
               "string_value": "productpage"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              }
             }
            },
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              },
              "destination.service.name": {
               "string_value": "productpage"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              }
             }
            }
           }
          },
          "name": "default"
         }
        ]
       },
       {
        "name": "reviews.default.svc.cluster.local:9080",
        "domains": [
         "reviews.default.svc.cluster.local",
         "reviews.default.svc.cluster.local:9080",
         "reviews",
         "reviews:9080",
         "reviews.default.svc.cluster",
         "reviews.default.svc.cluster:9080",
         "reviews.default.svc",
         "reviews.default.svc:9080",
         "reviews.default",
         "reviews.default:9080",
         "172.21.208.0",
         "172.21.208.0:9080"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9080||reviews.default.svc.cluster.local",
           "timeout": "0s",
           "retry_policy": {
            "retry_on": "connect-failure,refused-stream,unavailable,cancelled,resource-exhausted,retriable-status-codes",
            "num_retries": 2,
            "retry_host_predicate": [
             {
              "name": "envoy.retry_host_predicates.previous_hosts"
             }
            ],
            "host_selection_retry_max_attempts": "5",
            "retriable_status_codes": [
             503
            ]
           },
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "reviews.default.svc.cluster.local:9080/*"
          },
          "typed_per_filter_config": {
           "mixer": {
            "@type": "type.googleapis.com/istio.mixer.v1.config.client.ServiceConfig",
            "disable_check_calls": true,
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "reviews.default.svc.cluster.local"
              },
              "destination.service.name": {
               "string_value": "reviews"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/reviews"
              }
             }
            },
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "reviews.default.svc.cluster.local"
              },
              "destination.service.name": {
               "string_value": "reviews"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/reviews"
              }
             }
            }
           }
          },
          "name": "default"
         }
        ]
       },
       {
        "name": "allow_any",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "PassthroughCluster"
          },
          "typed_per_filter_config": {
           "mixer": {
            "@type": "type.googleapis.com/istio.mixer.v1.config.client.ServiceConfig",
            "disable_check_calls": true,
            "mixer_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "PassthroughCluster"
              }
             }
            },
            "forward_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "PassthroughCluster"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2019-10-21T14:42:45.481Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.SecretsConfigDump"
  }
 ]
}
